Ft: JS Implementation of worker server
* A new template from wrangler using default JS
* The native rust implementation is buggy and I need this to work ASAP
* Looks for these headers in the request (in order):
  1. x-forwarded-for
    * Has tendency to be removed from worker events
    * Typical header to identify the public IP of requests
    * https://mzl.la/3AOc6ld
  2. x-real-ip
    * An inserted header from Cloudflare
    * https://bit.ly/3vjvgya
    * Detects roughly the same thing as x-forwarded-for
  3. cf-connecting-ip
    * Largely the same as (2.), follow same link for description.
* If none of these headers are encountered an error response is given
  * Code of 406 is used
  * It's a JSON body response with the incoming request's headers
  * Read the JSON to diagnose any problems

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
+bin/
+pkg/
+node_modules/
+.cargo-ok
+
 # Leavout compiled and executables
 debug/
 target/
 
-# No backup files from rustfmt
-**/*.rs.bk
-
 # The main target
 main
+
+# Defaults from wrangler
+/dist
+/target
+worker/
+**/*.rs.bk
+Cargo.lock
+wasm-pack.log
+build
